--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,65 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300");
+@media (min-width: 1200px) {
+  #left {
+    flex: 4;
+  }
+  #right {
+    flex: 6;
+  }
+}
+#signin {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  padding-bottom: 1rem;
+}
+#signin form {
+  width: 80%;
+  padding-bottom: 3rem;
+}
+#signin .logo {
+  margin-bottom: 8vh;
+}
+#signin .logo img {
+  width: 300px;
+}
+#signin label {
+  font-size: 0.9rem;
+  line-height: 2rem;
+  font-weight: 500;
+}
+#signin .text-input {
+  margin-bottom: 1.3rem;
+  width: 100%;
+  border-radius: 2px;
+  background: #181818;
+  border: 1px solid #555;
+  color: #ccc;
+  padding: 0.5rem 1rem;
+  line-height: 1.3rem;
+}
+
+.primary-btn {
+  padding: 0.7rem 1rem;
+  height: 2.7rem;
+  display: block;
+  border: 0;
+  border-radius: 2px;
+  font-weight: 500;
+  background: #f96816;
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+  text-align: center;
+  transition: all 0.5s;
+}
+
+a {
+  text-decoration: none;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
@@ -32,38 +93,4 @@ h6 {
 
 #right {
   flex: 1;
-}
-
-#signin {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
-  padding-bottom: 1rem;
-}
-#signin form {
-  width: 80%;
-  padding-bottom: 3rem;
-}
-#signin .logo {
-  margin-bottom: 8vh;
-}
-#signin .logo img {
-  width: 300px;
-}
-#signin label {
-  font-size: 0.9rem;
-  line-height: 2rem;
-  font-weight: 500;
-}
-#signin .text-input {
-  margin-bottom: 1.3rem;
-  width: 100%;
-  border-radius: 2px;
-  background: #181818;
-  border: 1px solid #555;
-  color: #ccc;
-  padding: 0.5rem 1rem;
-  line-height: 1.3rem;
 }/*# sourceMappingURL=main.css.map */
