--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,18 @@
   text-decoration: none;
   cursor: pointer;
   text-align: center;
-  transition: all 0.5s;
+  transition: background-color all 0.5s;
+}
+.primary-btn:hover {
+  opacity: 0.9;
+}
+
+#signin .primary-btn {
+  width: 100%;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 a {
