--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -10,5 +10,16 @@
   text-decoration: none;
   cursor: pointer;
   text-align: center;
-  transition: all 1s;
+  transition: background-color all 0.5s;
+
+  &:hover {
+    background: #ff7b39;
+    opacity: 0.9;
+  }
+}
+
+#signin {
+  .primary-btn {
+    width: 100%;
+  }
 }
