--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,24 @@
 }
 .primary-btn:hover {
   background: #ff7b39;
-  opacity: 0.9;
+}
+
+.secondary-btn {
+  padding: 0.7rem 1rem;
+  height: 2.7rem;
+  display: block;
+  border: 0;
+  border-radius: 2px;
+  font-weight: 500;
+  background: #f96816;
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+  text-align: center;
+  transition: background-color all 0.5s;
+}
+.secondary-btn:hover {
+  background: #ff7b39;
 }
 
 #signin .primary-btn {
