I have made some changes on the _button partial file

--- a/css/main.css
+++ b/css/main.css
@@ -64,17 +64,18 @@
   height: 2.7rem;
   display: block;
   border: 0;
-  border-radius: 2px;
+  border-radius: 1px solid #f4f4f4;
   font-weight: 500;
-  background: #f96816;
+  background: none;
   color: #fff;
   text-decoration: none;
   cursor: pointer;
   text-align: center;
-  transition: background-color all 0.5s;
+  transition: all 0.5s;
 }
 .secondary-btn:hover {
-  background: #ff7b39;
+  border-color: #ff7b39;
+  color: #ff7b39;
 }
 
 #signin .primary-btn {
