--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -23,17 +23,18 @@
   height: 2.7rem;
   display: block;
   border: 0;
-  border-radius: 2px;
+  border-radius: 1px solid #f4f4f4;
   font-weight: 500;
-  background: #f96816;
+  background: none;
   color: #fff;
   text-decoration: none;
   cursor: pointer;
   text-align: center;
-  transition: background-color all 0.5s;
+  transition: all 0.5s;
 
   &:hover {
-    background: #ff7b39;
+    border-color: #ff7b39;
+    color: #ff7b39;
     //opacity: 0.9;
   }
 }
