added some css code

--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -22,8 +22,8 @@
   padding: 0.7rem 1rem;
   height: 2.7rem;
   display: block;
-  border: 0;
-  border-radius: 1px solid #f4f4f4;
+  border: 1px solid #f4f4f4;
+  border-radius: 2px;
   font-weight: 500;
   background: none;
   color: #fff;
