--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,32 @@
   padding: 0.5rem 1rem;
   line-height: 1.3rem;
 }
+#signin .secondary-btn, #signin .or, #signin .links {
+  width: 60%;
+}
+#signin .links a {
+  display: block;
+  color: #fff;
+  margin-bottom: 1rem;
+  text-align: center;
+  font-size: 0.9rem;
+}
+#signin .or {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 1.2rem;
+  align-items: center;
+}
+#signin .or .bar {
+  flex: auto;
+  border: none;
+  height: 1px;
+  background: #aaa;
+}
+#signin .or span {
+  color: #ccc;
+  padding: 0 0.8rem;
+}
 
 .primary-btn {
   padding: 0.7rem 1rem;
@@ -63,8 +89,8 @@
   padding: 0.7rem 1rem;
   height: 2.7rem;
   display: block;
-  border: 0;
-  border-radius: 1px solid #f4f4f4;
+  border: 1px solid #f4f4f4;
+  border-radius: 2px;
   font-weight: 500;
   background: none;
   color: #fff;
@@ -80,6 +106,18 @@
 
 #signin .primary-btn {
   width: 100%;
+}
+
+#main-footer {
+  color: #ccc;
+  text-align: center;
+  font-size: 0.8rem;
+  max-width: 80%;
+  padding-top: 5rem;
+}
+#main-footer a {
+  color: #f96816;
+  text-decoration: underline;
 }
 
 * {
