--- a/scss/_signin.scss
+++ b/scss/_signin.scss
@@ -35,4 +35,37 @@
     padding: 0.5rem 1rem;
     line-height: 1.3rem;
   }
+
+  .secondary-btn, .or, .links {
+    width: 60%;
+  }
+
+  .links {
+    a {
+      display: block;
+      color: #fff;
+      margin-bottom: 1rem;
+      text-align: center;
+      font-size: 0.9rem;
+    }
+  }
+
+  .or {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 1.2rem;
+    align-items: center;
+
+    .bar {
+      flex: auto;
+      border: none;
+      height: 1px;
+      background: #aaa;
+    }
+
+    span {
+      color: #ccc;
+      padding: 0 0.8rem;
+    }
+  }
 }
