--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -10,7 +10,7 @@
   text-decoration: none;
   cursor: pointer;
   text-align: center;
-  transition: background-color all 0.5s;
+  transition: all 0.5s;
 
   &:hover {
     background: #ff7b39;
