--- a/scss/_respo.scss
+++ b/scss/_respo.scss
@@ -7,3 +7,32 @@
     flex: 6;
   }
 }
+
+@media(max-width: 768px) {
+  body {
+    overflow: auto;
+  }
+
+  #right {
+    display: none;
+  }
+  
+  #left {
+    justify-content: start;
+    margin-top: 4vh;
+  } 
+
+  #signin {
+    logo {
+      margin-bottom: 2vh;
+    }
+
+    .text-input {
+      margin-bottom: 0.7rem;
+    }
+  }
+
+  #main-footer {
+    padding-top: 1rem;
+  }
+}
