--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,8 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -43,6 +45,7 @@ h6 {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  margin-bottom: 20px;
 }
 
 #right {
